--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "scripts": {
     "release": "gh-release",
+    "clean": "rm -rf dist",
     "compile": "buble -i src -o dist",
     "test": "NODE_ENV=test standard src && mocha test/*.js -t 5000"
   },
