--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "spatial"
   ],
   "license": "Apache-2.0",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/koopjs/koop-core.git"
@@ -54,7 +54,7 @@
     "release": "gh-release",
     "clean": "rm -rf dist",
     "compile": "buble -i src -o dist",
-    "test": "NODE_ENV=test standard src && mocha test/*.js -t 5000"
+    "test": "NODE_ENV=test standard && mocha test/*.js -t 5000"
   },
   "standard": {
     "globals": [
