Revert main back to dist folder.

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "spatial"
   ],
   "license": "Apache-2.0",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/koopjs/koop-core.git"
