Apply standard.js to all source and test files (#40)
* Found standard.js was not being applied to all source files, nor test files.  Adjust test script and make code comply with standard.js.

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "release": "gh-release",
     "clean": "rm -rf dist",
     "compile": "buble -i src -o dist",
-    "test": "NODE_ENV=test standard src && mocha test/*.js -t 5000"
+    "test": "NODE_ENV=test standard && mocha test/*.js -t 5000"
   },
   "standard": {
     "globals": [
