--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
+os:
+  - linux
+  - osx
+  - windows
+
 language: node_js
 
 node_js:
   - 8
+  - 10
 sudo: false # Enable docker-based containers
 cache:
   directories: # Cache dependencies
