--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@koopjs/logger": "^2.0.2",
     "body-parser": "^1.16.0",
+    "compression": "^1.7.3",
     "config": "^3.0.0",
     "cors": "^2.8.1",
     "ejs": "^2.3.3",
