Add compression by default, but allow it to be disabled.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@koopjs/logger": "^2.0.2",
     "body-parser": "^1.16.0",
     "chalk": "^2.4.2",
+    "compression": "^1.7.4",
     "config": "^3.0.0",
     "cors": "^2.8.1",
     "easy-table": "^1.1.1",
