--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gh-release": "^3.5.0",
     "mocha": "^6.0.0",
     "should": "^13.0.0",
+    "should-sinon": "0.0.6",
     "sinon": "^7.2.3",
     "standard": "^14.2.0",
     "supertest": "^4.0.0"
