--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ os:
 language: node_js
 
 node_js:
-  - 8
   - 10
+  - lts/*
 sudo: false # Enable docker-based containers
 cache:
   directories: # Cache dependencies
