--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "spatial"
   ],
   "license": "Apache-2.0",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/koopjs/koop-core.git"
@@ -61,7 +61,7 @@
     "release": "gh-release",
     "clean": "rm -rf dist",
     "compile": "buble -i src -o dist",
-    "test": "standard && mocha test -t 5000"
+    "test": "standard && mocha test --recursive -t 5000"
   },
   "standard": {
     "globals": [
