--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.0",
     "@koopjs/logger": "^2.0.6",
+    "@koopjs/output-geoservices": "^2.0.2",
     "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
     "compression": "^1.7.4",
@@ -25,7 +26,6 @@
     "express": "^4.17.1",
     "koop-cache-memory": "^1.1.0",
     "koop-localfs": "^1.1.2",
-    "koop-output-geoservices": "^2.0.0",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
