Update cache-plugin version.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "@hapi/joi": "^17.1.0",
+    "@koopjs/cache-memory": "^1.1.2",
     "@koopjs/logger": "^2.0.6",
     "@koopjs/output-geoservices": "^3.0.0",
     "body-parser": "^1.19.0",
@@ -33,7 +34,6 @@
     "easy-table": "^1.1.1",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
-    "koop-cache-memory": "^1.1.0",
     "koop-localfs": "^1.1.2",
     "lodash": "^4.17.15"
   },
