--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "standard": "^14.3.1",
     "supertest": "^4.0.2"
   },
-  "homepage": "https://github.com/koopjs/koop",
+  "homepage": "https://github.com/koopjs/koop-core",
   "keywords": [
     "etl",
     "feature",
